# The_CleanInbox_Crew

./: .gitignore  CMakeLists.txt  Dockerfile  NaiveBayes.cpp  README.txt
apps/: test_csv.cpp  test_rocchio.cpp
data/raw/: README.txt
frontend/: email.html  index.html  results.html  script.js  style.css
include/core/: CsvReader.h
include/ml/: NaiveBayes.h  Rocchio.h
src/: main.cpp
src/core/: CsvReader.cpp
src/ml/: NaiveBayes.cpp  NaiveBayes.h  Rocchio.cpp
